# mana-utility

./: .gitignore  CMakeLists.txt  LICENSE  README.md
linux/: CMakeLists.txt
src/: libmain.cpp
src/gui/: ManaColor.cpp  ManaColor.h  ManaGui.cpp  ManaGui.h
test_exe/: CMakeLists.txt  main.cpp
windows/: CMakeLists.txt
